# agent-protector

./: CLAUDE.md  Cargo.toml  README.md  policy.conf
protector/: Cargo.toml  build.rs
protector-common/: Cargo.toml
protector-common/src/: lib.rs
protector-ebpf/: Cargo.toml
protector-ebpf/src/: main.rs
protector/src/: banner.rs  data_policy.rs  errors.rs  main.rs  reporter.rs  tool_db.rs  tracker.rs  traffic_redirect.rs  validator.rs
protector/src/validators/: data_guard.rs  docker_guard.rs  fs_guard.rs  git_commit.rs  kubectl_guard.rs  mod.rs  redis_guard.rs  secret.rs  sql_guard.rs
proxy-injector/: Cargo.toml
proxy-injector/src/: discovery.rs  injector.rs  lib.rs  main.rs
