[package]
name = "proxy-injector"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Finds running Claude Code instances and restarts them with a local MITM proxy injected"

[[bin]]
name = "proxy-injector"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true, default-features = true }
libc   = { workspace = true }
log    = { workspace = true }
env_logger = { workspace = true }
